tests/samples/negative/control_flow/for_in_protocol_next_void.ax
module for_in_protocol_next_void;

struct BadIter {
    value: i32;
}

impl BadIter {
    fn has_next(self: &mut BadIter) -> bool {
        return self.value > 0;
    }

    fn next(self: &mut BadIter) -> void {
        self.value = 0;
    }
}

fn main() -> i32 {
    let iter: BadIter = BadIter { value: 1 };
    for value in iter {
        return 1;
    }
    return 0;
}
